--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -33,7 +33,9 @@ h1, h2, h3 {
 	cursor: pointer;
 	max-width: none;
 }
+
 /*MENU*/
+
 .menu-nav {
 	background: #FE7F2D;
 	height: 65px;
@@ -65,5 +67,97 @@ h1, h2, h3 {
 
 .menu-nav ul li {
 	margin-left: 30px;
+	position: relative;
+}
+
+/*FORMULARIO*/
+
+form{
+	margin: auto;
+	text-align: center;
+	color: white;
+}
+
+form div{
+	text-align: center;
+	font-weight: bold;
+	font-size: 30px;
+	color: white;
+}
+
+.link-registro{
+	font-size: 20px;
+}
+
+/*DIVISION DE PANTALLA*/
+
+main{
+	width: 60%;
+}
+
+.barra-lateral{
+	background: #77878B;
+	width: 30%;
+	float: right;
+	margin: 30px;
+	padding: 30px;
+}
+
+.barra-lateral a {
+	color: white;
+	text-decoration: underline;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+/*SECCION TARJETAS*/
+
+.tarjetas-column{
+	background: #533E2D;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+	align-items: start;
+	border-top: 30px solid #F7F0F5;
+}
+
+.tarjeta-column{
+	display: flex;
+	flex-direction: row;
+}
+
+.tarjeta-column:hover{
+	background: #6A8D73;
+}
+
+.formulario{
+	display: flex;
+	flex-direction: row;
+}
+
+.texto-tarjeta{
+	text-align: left;
+	color: white;
+}
+
+.texto-tarjeta h2 {
+	text-align: left;
+	margin-bottom: 0px;
+}
+
+.texto-tarjeta h3 {
+	font-family: palatino_linotype, georgia, sabon_next_lt;
+	text-align: left;
+	margin-bottom: 8px;
+	font-style: oblique;
+}
+
+footer .contenedor {
+	display: flex;
+	justify-content: space-between;
+	width:100%;
+	background-color: #526538;
+	padding: 20px;
+	color: #fff;
 	position: relative;
 }
