--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -6,7 +6,7 @@
 
 body {
 	background: #F7F0F5;
-	font-family: palatino_linotype, georgia, sabon_next_lt;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 	line-height: 1.3;
 }
 
