--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -119,6 +119,8 @@ main{
 	gap: 1.5rem;
 	align-items: start;
 	border-top: 30px solid #F7F0F5;
+	border-bottom: 30px solid #F7F0F5;
+
 }
 
 .tarjeta-column{
@@ -152,6 +154,8 @@ main{
 	font-style: oblique;
 }
 
+/*FOOTER*/
+
 footer .contenedor {
 	display: flex;
 	justify-content: space-between;
@@ -160,4 +164,44 @@ footer .contenedor {
 	padding: 20px;
 	color: #fff;
 	position: relative;
+}
+
+/*ANIMACION*/
+
+.blurredBg{
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgb(254,127,45,0.8);
+	backdrop-filter: blur(5px);
+}
+
+.logoAnimation{
+	width: 200px;
+	position: fixed;
+	z-index: 2;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	animation: rotateLogo 2.5s infinite linear, opacity 2.5s infinite linear;
+}
+@keyframes rotateLogo{
+	from{
+		transform: translate(-50%, -50%) rotate(0deg);
+	}
+	to{
+		top: -5%;
+		left: -1.5%;
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes opacity{
+	0%{opacity: 1;}
+	80%{opacity: 0.75;}
+	90%{opacity: 0.5;}
+	100%{opacity: 0;}
 }
