--- a/styles/estiloContacto.css
+++ b/styles/estiloContacto.css
@@ -108,7 +108,8 @@ h1, h2, h3 {
 
 .texto-tarjeta h3 {
 	font-family: palatino_linotype, georgia, sabon_next_lt;
-	text-align: left;
+	text-align: justify;
+	text-justify: distribute;
 	margin-bottom: 8px;
 	font-style: oblique;
 }
