--- a/styles/estiloContacto.css
+++ b/styles/estiloContacto.css
@@ -79,7 +79,8 @@ h1, h2, h3 {
 	gap: 1.5rem;
 	align-items: start;
 	border-top: 30px solid #F7F0F5;
-    border-bottom: 30px solid #F7F0F5;
+	border-bottom: 30px solid #F7F0F5;
+	color:#FFFFFF;
 }
 
 .tarjeta-column{
@@ -89,11 +90,6 @@ h1, h2, h3 {
 
 .tarjeta-column:hover{
 	background: #6A8D73;
-}
-
-.formulario{
-	display: flex;
-	flex-direction: row;
 }
 
 .texto-tarjeta{
@@ -112,6 +108,15 @@ h1, h2, h3 {
 	text-justify: distribute;
 	margin-bottom: 8px;
 	font-style: oblique;
+}
+
+/*MAPA*/
+
+.map{
+    margin-bottom: 8px;
+	margin-left: 200px;
+    width: 800px;
+    height: 300px;
 }
 
 /*FOOTER*/
